RESOLVED FIXED229716
[COOP] html/cross-origin-opener-policy/coop-navigate-same-origin-csp-sandbox.html WPT test is failing
https://bugs.webkit.org/show_bug.cgi?id=229716
Summary [COOP] html/cross-origin-opener-policy/coop-navigate-same-origin-csp-sandbox....
Chris Dumez
Reported 2021-08-31 09:21:42 PDT
html/cross-origin-opener-policy/coop-navigate-same-origin-csp-sandbox.html WPT test is failing: FAIL coop-navigate-same-origin-csp-sandbox assert_equals: expected "Success: no opener" but got "Error: have opener"
Attachments
Patch (10.07 KB, patch)
2021-08-31 09:27 PDT, Chris Dumez
no flags
Patch (12.13 KB, patch)
2021-08-31 14:09 PDT, Chris Dumez
no flags
Patch (12.28 KB, patch)
2021-08-31 16:41 PDT, Chris Dumez
no flags
Patch (13.15 KB, patch)
2021-09-01 08:13 PDT, Chris Dumez
no flags
Patch (12.33 KB, patch)
2021-09-01 08:15 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2021-08-31 09:27:00 PDT
Chris Dumez
Comment 2 2021-08-31 14:09:12 PDT
Chris Dumez
Comment 3 2021-08-31 16:41:41 PDT
Chris Dumez
Comment 4 2021-09-01 08:13:20 PDT
Chris Dumez
Comment 5 2021-09-01 08:15:16 PDT
Radar WebKit Bug Importer
Comment 6 2021-09-01 09:01:56 PDT
Chris Dumez
Comment 7 2021-09-02 10:23:04 PDT
Comment on attachment 437029 [details] Patch Patch is ready for review, all EWS is green.
EWS
Comment 8 2021-09-02 11:37:14 PDT
Committed r281941 (241250@main): <https://commits.webkit.org/241250@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437029 [details].
Note You need to log in before you can comment on or make changes to this bug.